package com.example.habit_tracker;

/**
 * Achieve total abstraction for Habit and Event instance
 */
public interface Info {
    String getUsername();
    String getHabitID();
    String getName();
    String getComment();

}
